--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "stripe": "^18.2.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "ts-node": "^10.9.2"
   }
 }
